# shy-light

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
camera/: camera_base.py  factory.py  realsense.py  webcam.py
detectors/: __init__.py  detector_base.py  expression.py  face.py  hands.py  peekaboo.py  proximity.py
osc/: mapping.py  sender.py
state/: manager.py  schema.py
utils/: debug_peekaboo.py  download_models.py
